# satchel

./: .gitignore  LICENSE  LOCAL_CONTACTS.md  README.md  fee-bump-design.md  observability-design.md  post_mortem.md
.github/workflows/: ci.yml  release.yml  security.yml
corkboard/: Cargo.toml  README.md
corkboard/src/: main.rs
docs/: ARCHITECTURE.md  FUNDING_FEE_BUMP.md  FUNDING_FEE_BUMP_PLAN.md  MULTI_MACHINE_122.md  NODELESS_DECISIONS.md  NODELESS_WALLET.md  NODELESS_WALLET_STATUS.md  NOSTR_TRANSPORT.md  PRIVATE_OFFERS.md  RC6_SWAP_FUNDING_FIXES.md  README.md  SATCHEL.md  SATCHEL_BACKEND.md  SATCHEL_UI.md  STATE_RECONSTRUCTION.md  TEST_FRAMEWORK_PLAN.md  TRADING_ROADMAP.md  V2_ADAPTOR_SWAPS.md
docs/handbook-pact/: README.md  build.ps1  metadata.yaml  style.tex
docs/handbook-pact/chapters/: ch01-about.md  ch02-what-is-pact.md  ch03-architecture.md  ch04-building.md  ch05-running-pactd.md  ch06-configuring-coins.md  ch07-seed-and-wallet.md  ch08-pact-cli.md  ch09-rpc-conventions.md  ch10-api-node-wallet-coins.md  ch11-api-swaps-v1.md  ch12-api-swaps-v2.md  ch13-api-board-offers-fees.md  ch14-swap-lifecycle.md  ch15-htlc-v1.md  ch16-adaptor-v2.md  ch17-timelocks-margins.md  ch18-fees-refunds.md  ch19-safety-gating.md  ch20-noticeboard.md  ch21-wire-format.md  ch22-nostr.md  ch23-corkboard.md  ch24-private-offers.md  ch25-integrating.md  ch26-testing-harness.md  ch27-reference.md  front-copyright.md  part1.md  part2.md  part3.md  part4.md  part5.md  part6.md
docs/handbook-satchel/: .gitignore  README.md  build.ps1  metadata.yaml  style.tex
docs/handbook-satchel/chapters/: ch01-about.md  ch02-what-is-satchel.md  ch03-installing.md  ch04-first-launch.md  ch05-setting-up-coins.md  ch06-tour.md  ch07-corkboard.md  ch08-making-an-offer.md  ch09-taking-an-offer.md  ch10-tracking-swaps.md  ch11-wallets.md  ch12-contacts.md  (+19 more)
docs/wiki/: Architecture.md  Building-from-Source.md  Configuring-Coins.md  FAQ.md  Getting-Started.md  Glossary.md  Home.md  How-Atomic-Swaps-Work.md  JSON-RPC-API.md  Private-Offers.md  Running-pactd.md  Satchel-User-Guide.md  Security-Model.md  Self-Hosting-Corkboard.md  Transports.md  _Footer.md  _Sidebar.md  pact-cli.md
pact/: Cargo.toml  README.md  clippy.toml
pact-nostr/: Cargo.toml
pact-nostr/src/: lib.rs
pact-proto/: Cargo.toml
pact-proto/src/: crypto.rs  envelope.rs  lib.rs  seal.rs  slip.rs
pact/harness/: README.md  observer_compare.py  observer_playground.py  playground.py  rc16_duprepro.py  regtest_harness.py  repro_multiswap.py  satchel_playground.py  satchel_playground_nostr.py  spike_electrs.py  test_adaptor_swap.py  test_follow_e2e.py  test_nodeless_e2e.py  test_runner.py  test_swap_e2e.py
pact/harness/ci/: fetch-binaries.sh
pact/harness/framework/: __init__.py  binaries.py  clock.py  daemon.py  market.py  node.py  satchel.py  services.py  stack.py  testbase.py  util.py
pact/harness/play/: __init__.py  __main__.py  observer_compare.py  repro_multiswap.py
pact/harness/tests/: follow.py  framework_selftest.py  multimachine.py  nodeless.py  swap_v1.py  swap_v1_rescue.py  swap_v2_adaptor.py  takeover.py  upgrade.py
pact/libswap/: Cargo.toml
pact/libswap/examples/: electrum_probe.rs  gen-vectors-v2.rs  gen-vectors.rs
pact/libswap/src/: adaptor_engine.rs  adaptor_swap.rs  board.rs  chain.rs  coins_file.rs  engine.rs  fee_policy.rs  htlc.rs  keys.rs  lib.rs  machine.rs  messages.rs  musig.rs  nostr_board.rs  params.rs  reconstruct.rs  registry.rs  rpc.rs  server_health.rs  store.rs  swap.rs  taproot.rs  wallet_bdk.rs  wallet_worker.rs
pact/libswap/tests/: vectors.rs  vectors_v2.rs
pact/pact-cli/: Cargo.toml
pact/pact-cli/src/: main.rs
pact/pactd/: Cargo.toml
pact/pactd/src/: main.rs  merchants.rs  nostr_service.rs
satchel/: Cargo.toml  README.md  coins.toml  installer-hooks.nsh  tauri.conf.json
satchel/capabilities/: default.json
satchel/icons/: icon.icns
satchel/src/: coins_file.rs  compose.rs  main.rs
satchel/ui/: eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
satchel/ui/src/: App.tsx  AppContext.tsx  bip39.ts  contacts.tsx  denom.tsx  format-slip.ts  format.ts  fx.tsx  identity.ts  main.tsx  notify.ts  prefs.tsx  theme.ts  update.tsx  version.ts
satchel/ui/src/api/: tauri.ts  types.ts
satchel/ui/src/assets/coins/: index.ts
satchel/ui/src/components/: ActiveSwaps.tsx  CashrateWidget.tsx  ChoiceCard.tsx  CoinGlyph.tsx  ContactEditDialog.tsx  ContactMenu.tsx  CounterpartyTag.tsx  DialogLanguageMenu.tsx  ExitGate.tsx  FeePreview.tsx  Header.tsx  Identicon.tsx  InsufficientFunds.tsx  LanguageMenu.tsx  LogPanel.tsx  NetworkStamp.tsx  OfferForm.tsx  ProtocolChip.tsx  ServerUpdatePrompt.tsx  Sidebar.tsx  StatusIndicators.tsx  StatusViews.tsx  SwapProgressLine.tsx  Toasts.tsx  UpdateDialog.tsx  WatchOnlyStamp.tsx
satchel/ui/src/dialogs/: BoardConfig.tsx  CoinSetup.tsx  CoinWizard.tsx  MerchantManager.tsx  SeedForm.tsx  SeedProvision.tsx  Unlock.tsx  WalletActions.tsx  Wizard.tsx
satchel/ui/src/hooks/: useTakeConfirm.tsx
satchel/ui/src/i18n/: bg.ts  ca.ts  cs.ts  de.ts  el.ts  en.ts  es.ts  es419.ts  fi.ts  fr.ts  gl.ts  hi.ts  hr.ts  id.ts  index.tsx  it.ts  ja.ts  lt.ts  nl.ts  pl.ts  ptBR.ts  ro.ts  ru.ts  sk.ts  sr.ts  sw.ts  tr.ts  uk.ts  vi.ts  zhCn.ts
satchel/ui/src/screens/: CoinsScreen.tsx  ContactsScreen.tsx  CorkboardScreen.tsx  PostOfferScreen.tsx  PrivateCreateScreen.tsx  PrivateReceiveScreen.tsx  PrivateSlipsScreen.tsx  RelaysScreen.tsx  SettingsScreen.tsx  SwapsScreen.tsx  WalletScreen.tsx  narrate.ts
satchel/ui/src/ui/: ConfirmProvider.tsx  dialogs.tsx  nav.tsx
spec/: README.md  protocol-v2.md  protocol.md
spec/vectors/: htlc_v1.json  htlc_v2.json
tools/: knockdown.ps1  playground-cork.ps1  playground-multimachine.ps1  playground-nodeless.ps1  playground-nostr-nodeless.ps1  playground-nostr.ps1  playground-observer.ps1  playground-viewer.ps1  playground-watchonly.ps1  playground.ps1  prod-watch-viewer.ps1
tools/demo-runner/: Cargo.toml
tools/demo-runner/src/: main.rs
tools/relay-prober/: Cargo.toml
tools/relay-prober/src/: main.rs
(+1 files in other folders)
