[package]
name = "pact-proto"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pact wire protocol: signed envelopes, canonical JSON, BIP340 sign/verify, relay sealing, swap-id/preimage hashing. Chain-agnostic — no engine, no chain, no daemon. Reference for spec/protocol.md."

[dependencies]
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
