[workspace]
resolver = "2"
members = ["libswap", "pactd", "pact-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/PoC-Consortium/satchel"

[workspace.dependencies]
libswap = { path = "libswap" }

# The extracted btcx crates (github.com/PoC-Consortium/btcx): chain params +
# registry, wallet key derivation, seed-at-rest storage, the Electrum
# connection layer, and the BDK on-chain wallet. Pinned by rev — bump
# deliberately, never track a branch.
params-btcx = { git = "https://github.com/PoC-Consortium/btcx", rev = "f9c51fcf5a0b2209099a4fb9ac51f406a4f3c972" }
keys-btcx = { git = "https://github.com/PoC-Consortium/btcx", rev = "f9c51fcf5a0b2209099a4fb9ac51f406a4f3c972" }
seedstore = { git = "https://github.com/PoC-Consortium/btcx", rev = "f9c51fcf5a0b2209099a4fb9ac51f406a4f3c972" }
electrum-btcx = { git = "https://github.com/PoC-Consortium/btcx", rev = "f9c51fcf5a0b2209099a4fb9ac51f406a4f3c972" }
wallet-btcx = { git = "https://github.com/PoC-Consortium/btcx", rev = "f9c51fcf5a0b2209099a4fb9ac51f406a4f3c972", features = ["swap-support"] }

# Bitcoin stack — versions must stay mutually compatible (all on bitcoin 0.32).
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
miniscript = "12"
# rusqlite feature: bdk's sqlite persister; pinned 0.31 = our own rusqlite,
# so the bundled libsqlite3-sys stays a single native link.
bdk_wallet = { version = "2", features = ["rusqlite"] }
electrum-client = "0.21"
# libswap dials Electrum ssl:// itself (accept-any-cert verifier, chain.rs);
# pactd separately installs the process CryptoProvider. Same 0.23 as the tree.
rustls = "0.23"
bech32 = "0.11"
bip39 = "2"

# v2 adaptor swaps (pact-htlc-v2): MuSig2 + Schnorr adaptor signatures.
# NOTE: musig2 pulls secp256k1 0.31, *separate* from bitcoin 0.32's 0.29 —
# never mix the two types; convert at the boundary by bytes (spec/protocol-v2.md).
musig2 = { version = "0.4", features = ["rand"] }

scrypt = { version = "0.11", default-features = false }
chacha20poly1305 = "0.10"
# OS keystore for the unattended seed-at-rest wrap (#120). Only the native
# backends — Windows Credential Manager + macOS Keychain — no external C deps
# (Linux Secret Service is deliberately not used; see libswap's target gate).
keyring = { version = "3", features = ["apple-native", "windows-native"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time", "sync"] }
axum = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[profile.release]
lto = true
