[package]
name = "satchel"
version = "0.1.0-rc13"
edition = "2021"
license = "MIT"
description = "Satchel - desktop app for PoCX trading: launches and supervises pactd, then opens the Pact UI"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
# OS notifications for swap events (issue #55) — paired with the
# @tauri-apps/plugin-notification JS API in the UI.
tauri-plugin-notification = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
# Update-check (GitHub releases) — rustls so cross-compiling the release matrix
# doesn't drag in OpenSSL. json for the GitHub API response.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

