[package]
name = "libswap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pact swap engine library: HTLC construction/verification, key + preimage derivation, swap state machine (spec/protocol.md)"

[dependencies]
pact-proto = { path = "../../pact-proto" }
bitcoin = { workspace = true }
miniscript = { workspace = true }
musig2 = { workspace = true }
bdk_wallet = { workspace = true }
electrum-client = { workspace = true }
rustls = { workspace = true }
bech32 = { workspace = true }
bip39 = { workspace = true }
scrypt = { workspace = true }
chacha20poly1305 = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[[example]]
name = "gen-vectors"
path = "examples/gen-vectors.rs"

[[example]]
name = "gen-vectors-v2"
path = "examples/gen-vectors-v2.rs"
