[package]
name = "libswap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pact swap engine library: HTLC construction/verification, key + preimage derivation, swap state machine (spec/protocol.md)"

[dependencies]
pact-proto = { path = "../../pact-proto" }
# The extracted btcx crates (github.com/PoC-Consortium/btcx): chain params +
# registry, wallet key derivation, seed-at-rest storage, the Electrum
# connection layer, and the BDK on-chain wallet (swap-support enables the
# build-and-hold funding primitives the v2 two-phase flow needs).
params-btcx = { workspace = true }
keys-btcx = { workspace = true }
seedstore = { workspace = true }
electrum-btcx = { workspace = true }
wallet-btcx = { workspace = true }
bitcoin = { workspace = true }
miniscript = { workspace = true }
musig2 = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
# examples/electrum_probe.rs parses satchel/coins.toml's connection table.
toml = { workspace = true }

[[example]]
name = "gen-vectors"
path = "examples/gen-vectors.rs"

[[example]]
name = "gen-vectors-v2"
path = "examples/gen-vectors-v2.rs"
