[package]
name = "pact-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "pact-cli — thin JSON-RPC client for pactd (the bitcoin-cli of Pact). No embedded engine."

[[bin]]
name = "pact-cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
