[package]
name = "pactd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pact daemon: local JSON-RPC over libswap, SQLite persistence, automatic refund scheduling. Bitcoin-Core-shaped (cookie / pact.conf auth)."

[dependencies]
libswap = { workspace = true }
pact-nostr = { path = "../../pact-nostr" }
nostr-sdk = "0.44"
# Only to install a process-wide rustls CryptoProvider at startup (see main()):
# nostr-sdk → tokio-rustls pulls rustls 0.23, which refuses to auto-pick a
# provider when both aws-lc-rs and ring are linked, breaking all wss:// relays.
rustls = "0.23"
bitcoin = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[dev-dependencies]
# Build/sign offer envelopes and seal relay blobs in the nostr_service test.
pact-proto = { path = "../../pact-proto" }
