[package]
name = "pactd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pact daemon: local JSON-RPC over libswap, SQLite persistence, automatic refund scheduling. Bitcoin-Core-shaped (cookie / pact.conf auth)."

[dependencies]
libswap = { workspace = true }
pact-nostr = { path = "../../pact-nostr" }
nostr-sdk = "0.44"
# Only to install a process-wide rustls CryptoProvider at startup (see main()):
# nostr-sdk → tokio-rustls pulls rustls 0.23, which refuses to auto-pick a
# provider when both aws-lc-rs and ring are linked, breaking all wss:// relays.
rustls = "0.23"
bitcoin = { workspace = true }
# Exclusive advisory lock on <data-dir>/.lock so only one pactd runs per data
# dir (§0 of docs/MULTI_MACHINE_122.md — the guard the seed-scope partition
# rests on). Pure-Rust flock/LockFileEx wrapper, no C dep beyond libc/winapi
# already in the tree; the OS releases the lock on process exit (no stale PID).
fs2 = "0.4"
hex = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[dev-dependencies]
# Build/sign offer envelopes and seal relay blobs in the nostr_service test.
pact-proto = { path = "../../pact-proto" }
